# python-dataform-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: release.yml
.idx/: dev.nix
dataform/: workflow_settings.yaml
dataform/definitions/sources/appsflyer/: events.sqlx
dataform/includes/: constants.js  udfs.js
dataform/includes/configs/: dev.js  prod.js
src/surquest/GCP/: requirements.txt
src/surquest/GCP/dataform-cli/: main.py  requirements.txt
src/surquest/GCP/dataform_cli/: __main__.py  logger.py  pull.py  push.py
src/surquest/GCP/dataform_cli/handlers/: dataform_handler.py  gitignore_handler.py  pull_handler.py  push_handler.py
test/surquest/GCP/dataform-cli/: test_ignore_handler.py
