[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surquest-GCP-dataform-cli"
version = "0.0.1rc2"
description = "`dataform_cli` is a lightweight Python-based command-line interface (CLI) designed to simplify **file synchronization between local directories and Google Cloud Dataform workspaces**."
authors = [
    {name= "Michal Švarc", email= "michal.svarc@surquest.com"}
]
readme = "README.md"
dependencies = [
    "google-cloud-dataform >= 0.6.0",
    "pathspec >= 0.12.0"
]

[project.scripts]
dataform_cli = "surquest.GCP.dataform_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/surquest/python-dataform-cli"
"Bug Tracker" = "https://github.com/surquest/python-dataform-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/surquest"]